--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ archivesBaseName = 'basedefense'
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    mappings channel: 'snapshot', version: '20200514-1.15.1'
+    mappings channel: 'snapshot', version: '20200514-1.16'
     
     runs {
         client {
@@ -69,7 +69,7 @@ minecraft {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.15.2-31.2.8'
+    minecraft 'net.minecraftforge:forge:1.16.1-32.0.14'
 }
 
 jar {
@@ -119,5 +119,8 @@ publishing {
     }
     repositories {
         mavenLocal()
+        maven {
+            url "file:///${project.projectDir}/mcmodsrepo"
+        }
     }
 }
