--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 mod_version=0.0.1-DEV
+curios_version=1.16.2-4.0.0.0
 
 mc_version=1.16.2
 forge_version=33.0.5
