--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,51 @@
 buildscript {
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
+        maven {
+            name = "MinecraftForge"
+            url = 'https://files.minecraftforge.net/maven'
+        }
         jcenter()
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath group: 'org.ajoberstar.grgit', name: 'grgit-gradle', 'version': '4.0.2'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'org.ajoberstar.grgit'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'maven-publish'
 
+def mod_version = grgit.describe(commit: grgit.head(), longDescr: false, tags: true)
+if (mod_version == null) mod_version = "unknown"
 version = "${mc_version}-${mod_version}"
 group = 'sciwhiz12.basedefense'
 archivesBaseName = 'basedefense'
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
+println("Mod version: ${mod_version}")
+println('Java: ' + System.getProperty('java.version') + '; JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + '); Arch: ' + System.getProperty('os.arch'))
+
+repositories {
+    maven {
+        name = 'gigaherz\' maven'
+        url = 'https://www.dogforce-games.com/maven/'
+    }
+}
 
 sourceSets {
     main.resources.srcDirs += 'src/generated/resources/'
 }
 
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
+
 minecraft {
     mappings channel: 'snapshot', version: "${mappings_version}"
-    
+
     runs {
         client {
-            workingDirectory project.file('run/client')
+            workingDirectory file('run/client')
 
             property 'forge.logging.markers', "${logging_markers}"
             property 'forge.logging.console.level', 'debug'
@@ -41,7 +58,7 @@ minecraft {
         }
 
         server {
-            workingDirectory project.file('run/server')
+            workingDirectory file('run/server')
 
             property 'forge.logging.markers', "${logging_markers}"
             property 'forge.logging.console.level', 'debug'
@@ -54,7 +71,7 @@ minecraft {
         }
 
         data {
-            workingDirectory project.file('run/data')
+            workingDirectory file('run/data')
 
             property 'forge.logging.markers', "${logging_markers}"
             property 'forge.logging.console.level', 'debug'
@@ -74,16 +91,18 @@ dependencies {
     minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
 }
 
+def git_timestamp = grgit.head().dateTime.toLocalDateTime().toString() + grgit.head().dateTime.getOffset().toString().replace(':', '')
 jar {
     manifest {
         attributes([
-            "Specification-Title": "basedefense",
-            "Specification-Vendor": "sciwhiz12",
-            "Specification-Version": "1",
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"sciwhiz12",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Specification-Title"   : "basedefense",
+                "Specification-Vendor"  : "sciwhiz12",
+                "Implementation-Title"  : project.name,
+                "Implementation-Version": "${mod_version}",
+                "Implementation-Vendor" : "sciwhiz12",
+                "Build-Timestamp"       : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "Git-Commit"            : grgit.head().id,
+                "Git-Commit-Timestamp"  : git_timestamp
         ])
     }
 }
@@ -102,17 +121,16 @@ artifacts {
 
 publishing {
     publications {
-        pub_reobfJar(MavenPublication) {
+        rebofJar(MavenPublication) {
+            artifactId = archivesBaseName
             artifact jar
         }
-        pub_sourcesJar(MavenPublication) {
+        srcJar(MavenPublication) {
+            artifactId = archivesBaseName
             artifact sourcesJar
         }
     }
     repositories {
         mavenLocal()
-        maven {
-            url "file:///${project.projectDir}/mcmodsrepo"
-        }
     }
 }
