--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ sourceSets {
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    mappings channel: 'snapshot', version: "${mappings_version}"
+    mappings channel: 'official', version: '1.16.5'
 
     runs {
         client {
