Match to SocketMods template

--- a/build.gradle
+++ b/build.gradle
@@ -1,93 +1,56 @@
-buildscript {
-    repositories {
-        maven {
-            name = "MinecraftForge"
-            url = 'https://files.minecraftforge.net/maven'
-        }
-        jcenter()
-        mavenCentral()
-    }
-    dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-        classpath group: 'org.ajoberstar.grgit', name: 'grgit-gradle', 'version': '4.0.2'
-    }
+plugins {
+    id 'maven-publish'
+    id 'net.minecraftforge.gradle' version '5.1.+'
+    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
+    id 'org.spongepowered.mixin' version '0.7.+'
 }
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'org.ajoberstar.grgit'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'maven-publish'
+apply from: 'gradle/version.gradle'
 
-def mod_version = grgit.describe(commit: grgit.head(), longDescr: false, tags: true)
-if (mod_version == null) mod_version = "unknown"
-version = "${mc_version}-${mod_version}"
-group = 'sciwhiz12.basedefense'
-archivesBaseName = 'basedefense'
-
-println("Mod version: ${mod_version}")
-println('Java: ' + System.getProperty('java.version') + '; JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + '); Arch: ' + System.getProperty('os.arch'))
-
-repositories {
-    maven {
-        name = 'gigaherz\' maven'
-        url = 'https://www.dogforce-games.com/maven/'
-    }
-}
+version = versions.getVersion()
+println "Mod version: $version"
 
 sourceSets {
+    data
     main.resources {
         srcDirs += data.resources.srcDirs
-        exclude '.cache/' // Prevents the .cache file from being included in the jars
+        exclude '.cache/'
     }
 }
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
+print "Java: ${System.getProperty('java.version')}"
+print ", JVM: ${System.getProperty('java.vm.version')} (${System.getProperty('java.vendor')})"
+println ", Arch: ${System.getProperty('os.arch')}"
 
 minecraft {
-    mappings channel: 'official', version: '1.16.5'
+    mappings channel: mappings_channel, version: mappings_version
 
     runs {
-        client {
-            workingDirectory file('run/client')
+        configureEach {
+            workingDirectory project.file('run/' + it.name) as File
 
-            property 'forge.logging.markers', "${logging_markers}"
-            property 'forge.logging.console.level', 'debug'
+            property 'forge.logging.markers', logging_markers
+            property 'forge.logging.console.level', logging_console
 
-            mods {
-                basedefense {
-                    source sourceSets.main
-                }
+            ideaModule "${project.name}.main"
+            mods.register(modid as String) {
+                source sourceSets.main as SourceSet
             }
+        }
+
+        client {
         }
 
         server {
-            workingDirectory file('run/server')
-
-            property 'forge.logging.markers', "${logging_markers}"
-            property 'forge.logging.console.level', 'debug'
-
-            mods {
-                basedefense {
-                    source sourceSets.main
-                }
-            }
         }
 
         data {
-            workingDirectory file('run/data')
-
-            property 'forge.logging.markers', "${logging_markers}"
-            property 'forge.logging.console.level', 'debug'
-
-            args '--mod', 'basedefense', '--all'
+            args '--mod', modid, '--all'
             args '--output', sourceSets.data.resources.srcDirs[0].toString()
             args '--existing', sourceSets.main.resources.srcDirs[0].toString()
 
             ideaModule "${project.name}.data"
-            mods {
-                basedefense {
-                    sources sourceSets.main, sourceSets.data
-                }
+            mods.named(modid as String) {
+                sources sourceSets.main as SourceSet, sourceSets.data as SourceSet
             }
         }
     }
@@ -101,50 +64,60 @@ dependencies {
     minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
 
     dataImplementation sourceSets.main.output
-    dataCompileClasspath sourceSets.main.compileClasspath
 }
 
-def git_timestamp = grgit.head().dateTime.toLocalDateTime().toString() + grgit.head().dateTime.getOffset().toString().replace(':', '')
-jar {
-    manifest {
-        attributes([
-                "Specification-Title"   : "basedefense",
-                "Specification-Vendor"  : "sciwhiz12",
-                "Implementation-Title"  : project.name,
-                "Implementation-Version": "${mod_version}",
-                "Implementation-Vendor" : "sciwhiz12",
-                "Build-Timestamp"       : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                "Git-Commit"            : grgit.head().id,
-                "Git-Commit-Timestamp"  : git_timestamp
-        ])
-    }
+java {
+    archivesBaseName = "${project.name}-${mc_version}"
+    toolchain.languageVersion = JavaLanguageVersion.of(17)
+    withSourcesJar()
+}
+
+var manifestAttributes = [
+        'Specification-Title'   : modid,
+        'Specification-Vendor'  : author,
+        'Specification-Version' : versions.getRawVersion(),
+        'Implementation-Title'  : project.name,
+        'Implementation-Version': versions.getVersion(),
+        'Implementation-Vendor' : author,
+        "Git-Commit"            : versions.getCommitId(),
+        "Git-Commit-Timestamp"  : versions.getCommitTimestamp()
+] as LinkedHashMap
+
+tasks.withType(Jar).configureEach {
+    manifest.attributes(manifestAttributes)
     includeEmptyDirs false
+    preserveFileTimestamps = false
+    reproducibleFileOrder = true
+
+    // Normalize line endings from CRLF to LF
+    filesMatching('META-INF/mods.toml') {
+        //noinspection UnnecessaryQualifiedReference
+        filter(org.apache.tools.ant.filters.FixCrLfFilter.class,
+                eol: org.apache.tools.ant.filters.FixCrLfFilter.CrLf.newInstance('lf'))
+    }
 }
 
-jar.finalizedBy('reobfJar')
-jar.finalizedBy('sourcesJar')
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    from sourceSets.main.allSource
-    classifier "sources"
+tasks.named('jar', Jar).configure {
+    finalizedBy 'reobfJar'
 }
 
-artifacts {
-    archives sourcesJar
+// noinspection UnnecessaryQualifiedReference
+tasks.withType(net.minecraftforge.gradle.userdev.tasks.RenameJarInPlace).configureEach {
+    args.add('--stable')
 }
 
 publishing {
-    publications {
-        rebofJar(MavenPublication) {
-            artifactId = archivesBaseName
-            artifact jar
-        }
-        srcJar(MavenPublication) {
-            artifactId = archivesBaseName
-            artifact sourcesJar
-        }
+    publications.create('mavenJava', MavenPublication) {
+        from components.java
+
+        it.artifactId = project.name
+        it.version = "$mc_version-${versions.getRawVersion()}${versions.isSnapshot() ? '-SNAPSHOT' : ''}"
     }
+
     repositories {
-        mavenLocal()
+        maven {
+            name 'projectLocal'
+            url "file://${project.file('repo').absolutePath}"
+        }
     }
 }
