--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,17 @@
-name: build_on_push
-on:
-  push:
-    branches:
-      - '[0-9]+.[0-9]+.x'
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
-  pull_request:
-    branches:
-      - '[0-9]+.[0-9]+.x'
+name: CI Build
+on: [ push, pull_request ]
+
+permissions: read-all
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
 
-      - name: Gradle caching
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Cache Gradle wrapper and cache files
         uses: actions/cache@v2
         with:
           path: |
@@ -29,18 +22,19 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Set up JDK 8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: '8'
+          distribution: 'temurin'
 
-      - name: Grant execute permission for gradlew
+      - name: Grant execute permission for wrapper
         run: chmod +x gradlew
 
-      - name: Build using Gradle
+      - name: Build with Gradle
         run: ./gradlew build
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2.2.4
         with:
           name: Build artifacts
-          path: build/libs/
+          path: build/libs/*.jar
