--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# eclipse
+# Eclipse
 bin
 *.launch
 .settings
@@ -6,20 +6,19 @@ bin
 .classpath
 .project
 
-# idea
+# IntelliJ IDEA
 out
 *.ipr
 *.iws
 *.iml
 .idea
 
-# gradle
+# Gradle
 build
 .gradle
 
-# other
-eclipse
+# ForgeGradle
 run
 
-# Files from Forge MDK
-forge*changelog.txt
+# Maven publishing
+repo
