--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,21 @@
+# suppress inspection "UnusedProperty" for whole file
+
+# The information for the mod project
+group=sciwhiz12
+modid=basedefense
+author=sciwhiz12
+
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+# Minecraft, Forge, and mappings versions
 mc_version=1.16.3
 forge_version=34.1.0
+mappings_channel=official
+mappings_version=1.16.5
 
+# Logging markers and console logging level
 logging_markers=REGISTRIES
+logging_console=debug
